<resources>
    <string name="app_name">English</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_setting">Setting</string>
    <string name="title_message">Message</string>
    <string name="met">&#13217;</string>
    <string name="url">http://192.168.0.108/trotot/</string>
    <string name="nh_p_tin_nh_n">Nhập tin nhắn</string>
    <string name="chat">chat</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_pro__toeic">PRO_TOEIC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="level1">Level 250-550</string>
    <string name="level2">Level 550-750</string>
    <string name="level3">Level 750-990</string>

    <string name="nguphap">Ngữ pháp trong thi TOEIC</string>
    <string name="tumoi">1000 từ vựng TOEIC</string>

    <string name="caudung">Số câu đúng: </string>
    <string name="caudatraloi">Số câu đã trả lời : </string>


</resources>
