<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Danh mục">
        <menu>
            <item
                android:id="@+id/level1"
                tools:ignore="MenuTitle"
                android:title="@string/level1"
                android:icon="@mipmap/ic_2">
            </item>
            <item
                android:id="@+id/level2"
                tools:ignore="MenuTitle"
                android:title="@string/level2"
                android:icon="@mipmap/ic_2">
            </item>
            <item
                android:id="@+id/level3"
                tools:ignore="MenuTitle"
                android:title="@string/level3"
                android:icon="@mipmap/ic_2">
            </item>
            <item
                android:id="@+id/grammar"
                tools:ignore="MenuTitle"
                android:icon="@mipmap/ic_2"
                android:title="@string/nguphap">
            </item>
            <item
                android:id="@+id/word"
                tools:ignore="MenuTitle"
                android:icon="@mipmap/ic_2"
                android:title="@string/tumoi">
            </item>
        </menu>
    </item>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Khác">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
